--- a/試作/index.html
+++ b/試作/index.html
@@ -8,15 +8,17 @@
         table {
             width: 100%;
             border-collapse: collapse;
-            border: 1px solid #ddd;
+            border: 2px solid #5D7D40; /* 外枠の色を変更 */
         }
         th, td {
-            border: 1px solid #ddd;
             padding: 8px;
             text-align: left;
         }
         th {
             background-color: #B0CA98;
+        }
+        td {
+            border: none;
         }
         .popup-btn {
             cursor: pointer;
