--- a/news.html
+++ b/news.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お知らせ一覧</title>
+<button onclick="location.href='index.html'" style="margin: 10px; padding: 10px; background-color: #5D7D40; color: white; border: none; cursor: pointer;">
+    トップページに戻る
+</button>
+
     <style>
         table {
             width: 100%;
