--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ function displayUrgentNews(newsData) {
 fetchUrgentNews();
 
 
-</script>
+<script src="script.js"></script>
+
 
 </body>
 </html>
