--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>トップページ</title>
+    <title>お知らせ一覧</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <!-- ✅ ページ移動用のナビゲーションバー -->
         <nav>
             <a href="index.html">トップページ</a>
             <a href="news.html">お知らせ一覧</a>
@@ -19,19 +18,23 @@
         </nav>
     </header>
 
-    <h1>講義サイト トップページ</h1>
+    <h1>お知らせ一覧</h1>
 
-    <!-- ✅ 緊急のお知らせ入力欄 -->
-    <h2>緊急のお知らせ</h2>
-    <div id="emergencyInputArea">
-        <textarea id="emergencyInput" placeholder="緊急のお知らせを入力してください"></textarea>
-        <button onclick="saveEmergency()">保存</button>
-    </div>
+    <!-- ✅ エクセルファイルのアップロードボタン -->
+    <input type="file" id="fileInput" accept=".xlsx">
+    <button onclick="downloadNewsJSON()">news.jsonをダウンロード</button>
 
-    <!-- ✅ 緊急のお知らせ表示欄 -->
-    <div id="emergencyDisplayArea">
-        <p id="emergencyNews">現在、緊急のお知らせはありません。</p>
-    </div>
+    <!-- ✅ お知らせ一覧表示エリア -->
+    <table id="noticeTable">
+        <thead>
+            <tr>
+                <th>更新日</th>
+                <th>対象</th>
+                <th>概要</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
     <script src="script.js"></script>
 </body>
