--- a/news.html
+++ b/news.html
@@ -36,6 +36,9 @@
         <tbody></tbody>
     </table>
 
+    <!-- ✅ xlsxライブラリの読み込み -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
